--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "compression": "^1.8.0",
+    "connect-mongo": "^5.1.0",
     "connect-redis": "^8.0.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -28,6 +29,7 @@
     "helmet": "^8.0.0",
     "http": "^0.0.1-security",
     "jwt-simple": "^0.5.6",
+    "mongoose": "^8.14.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
